updated chef count, changed delete path, fixed images so they are not squished, blue line around search bar

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -83,3 +83,7 @@
 .avail-chefs {
   font-size: 12px;
 }
+
+.card-image {
+  object-fit: cover;
+}
